@@ -23,6 +23,14 @@ CUTS_Property_Parser::~CUTS_Property_Parser (void)
 //
 // parse
 //
+bool CUTS_Property_Parser::parse_str (const ACE_CString & str)
+{
+  return this->parse (str.c_str ());
+}
+
+//
+// parse
+//
 bool CUTS_Property_Parser::parse (const char * str)
 {
   CUTS_Property_Parser_Grammar grammar (this->prop_map_);
